test-data/error/max-accel-yaw-offset-no-accel.hltas
version 1
frames
s51-j-----|------|------|0.001|- 0 10|-|1